=========
CHANGELOG
=========

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.  This file is offered as-is,
without any warranty.

VERSION 1.2
===========
Fixed icon to always show on the window, not just when Qrgui is started from
the directory it lives in.
Removed "Exiting Qrgui..." notice.

VERSION 1.1
===========
June 14, 2014

Added variables for the program name (easy to rebrand) and version number
(closer to the top of the code.)
Added a space saving function for the check if canceled code.
Spelling correction.

VERSION 1.0
===========
May 19, 2014

Nominal 1.0 -- I can't find any way to improve it.
Added some more comments.

VERSION 0.7
===========
May 19, 2014

Exits properly when cancel button is pressed.
Prints program name and status info in the terminal.
Checks if qrencode is installed.

VERSION 0.6
===========
May 19, 2014

Fixed to save with proper filename.
Verified to work with spaces in filenames, directories
and removable filesystems.

VERSION 0.5
===========
May 19, 2014

Basically works.
First git upload.

VERSION 0.4 AND BELOW
=====================

Pieces of junk that didn't work/I can't remember what I changed.
