@@ -2,6 +2,8 @@
 CHANGELOG
 =========
 
+Copyright (C) 2014 Joshua Wells
+
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.  This file is offered as-is,
@@ -9,6 +11,10 @@ without any warranty.
 
 VERSION 1.2
 ===========
+December 31, 2014
+
+Fixed some grammatical errors.
+Added markup to the "qrencode not found" dialog.
 Fixed icon to always show on the window, not just when Qrgui is started from
 the directory it lives in.
 Removed "Exiting Qrgui..." notice.
